Added google to portfolio

--- a/google2020.html
+++ b/google2020.html
@@ -62,6 +62,8 @@
             <h1>The Challenge</h1>
             <br>
             <p class="quote">" Your school wants to strengthen the community by encouraging experienced students to connect with new students and help them adjust to campus life. Design an experience that allows mentors and mentees to discover each other. Consider the needs of both mentors and mentees, including how someone may become a mentor and how to connect mentors to mentees. "</p>
+            <br>
+            <p>Timeline: 1 week (2/20/2020 - 2/27/2020)</p>
             
             <br><hr><br>
         </div>
