--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
                 </li>
             </a>
 
-            <!-- <a class="card-link" href="google2020.html">
+            <a class="card-link" href="google2020.html">
                 <li data-aos="fade-up" data-aos-duration="600" class="thumbnail-grid-item">
                     <div class="card" style="background-image: url(google.jpg); background-size: contain; background-repeat: no-repeat;">
                         <div class="card-pants">
@@ -91,7 +91,7 @@
                         </div>
                     </div>
                 </li>
-            </a> -->
+            </a>
               
             
             </ul>
