Added highlighted text

--- a/google2020.html
+++ b/google2020.html
@@ -76,9 +76,9 @@
             <p>Before attempting to solve any problem, we should take a closer look into the issue at hand.</p>
             <br>
             <h3>Finding the Problem</h3>
-            <p>We want to strengthen the community of students at my school by providing an experience for people to create mentor / mentee relationships. The current underlying problem is that students are not seeking each other out to make these connections.</p>
+            <p>We want to strengthen the community of students at my school by providing an experience for people to create mentor / mentee relationships. <mark>The current underlying problem is that students are not seeking each other out to make these connections.</mark></p>
             <br>
-            <p>Why are people not seeking to create these relationships? As I discovered in this research phase, students are overwhelmed by the amount of opportunities to meet people or students feel like their need for mentorship is unreciprocated.</p>
+            <p>Why are people not seeking to create these relationships? Through interviewing a selection of current Texas A&M students, I discovered that students are overwhelmed by the opportunities to meet people thus never do or students feel like their need for mentorship is unreciprocated. </p>
             <br>
             <div class="row">
                 <div class="col-lg-4 col-md-4 col-sm-4 col-xs-4">
@@ -98,7 +98,7 @@
             <h3>Solving the Problem</h3>
             <p>With these discoveries in mind, I decided to come up with a central mission statement for the app.</p>
             <br>
-            <p style="font-weight: bolder; font-style: italic;">Get mentors to find mentees, and get mentees to find mentors.</p>
+            <p style="font-weight: bolder; font-style: italic;"><mark>Get mentors to find mentees, and get mentees to find mentors.</mark></p>
             <br>
             <p>In order to achieve this mission statement, I created three goals that I would focus on:</p>
             <ol style="padding-left: 10%">
@@ -134,7 +134,7 @@
                 </div>
             </div>
             <br><br>
-            <p>The overall user journey can be split up in three main stages. The user’s profile including the initial profile creation, exploring other profiles, and contacting a suitable match. The tabs located in the bottom navigation bar makes transitioning between stages fluid. This clear and simple navigation contributes to achieving goal #3.</p>
+            <p>The overall user journey can be split up in three main stages. The user’s profile including the initial profile creation, exploring other profiles, and contacting a suitable match. The tabs located in the bottom navigation bar makes transitioning between stages fluid. <mark>This clear and simple navigation contributes to achieving goal #3.</mark></p>
             <br>
             <p>Since messaging and saving profiles works similarly to other applications, I won’t go into detail about how they function.</p>
             <br>
@@ -152,9 +152,9 @@
             <br><br>
             <p>The welcome screen is fairly simple. The user will get an introduction to the app and immediately be prompted to start setting up a profile based on their user identity.</p>
             <br>
-            <p>The questionnaire is also simple. Once the user is identified, they will begin to answer a series of questions in order to completely fill in their profile based on their answers. The quick automatic profile completion is the largest contributor to goal #1. 
+            <p>The questionnaire is also simple. Once the user is identified, they will begin to answer a series of questions in order to completely fill in their profile based on their answers. <mark>This clear and simple navigation contributes to achieving goal #3.</mark>
                 When the user finishes their questionnaire, they are instantly ready to start the search for a match. If they desire, users will have the option to change or add information that was automatically filled on their profile page. 
-                With goal #3 in mind, the questionnaire splits up the overwhelming stare of a blank profile into small approachable questions that users feel comfortable answering one at a time.
+                <mark>With goal #3 in mind, the questionnaire splits up the overwhelming stare of a blank profile into small approachable questions that users feel comfortable answering one at a time.</mark>
             </p>
             <br>
             <p>If the user decides to skip the questionnaire, they are taken to the explore page where they can only view profiles. A notification card urges the user to complete the questionnaire, and it remains there until a profile is created. </p>
@@ -171,14 +171,14 @@
                     <p>Like profile creation, the explore page is simple. We do not want any unnecessary distractions for a user trying to reach their end goal of finding a mentor / mentee.</p>
                     <br>
                     <p>Based on the user’s identity chosen on the welcome screen, the explore page will show profiles of the compatible identity. If you are looking to become a mentor, you will see potential mentees. 
-                        If you are looking to become a mentee, you will see potential mentors. In order to achieve goal #2, each profile on the explore page is comprised of compact cards with key information such as name, age, and interests. 
+                        If you are looking to become a mentee, you will see potential mentors. <mark>In order to achieve goal #2, each profile on the explore page is comprised of compact cards with key information such as name, age, and interests.</mark> 
                     </p>
                     <br>
                     <p>Profiles with the closest match to the user’s answered questions will appear at the top, highlighting the aspects that makes them a good match. Profiles with little compatibility to the user will not be hidden. Instead, they will just appear lower down on the list. Additionally, users have the option to filter results based on desired criteria like age, major, or interests.</p>
                 </div>
             </div>
             <br>
-            <p>In an effort to achieve goals #2 and #3, the full screen profile viewer provides the user with only necessary information to aid them in moving forward in the flow.</p>
+            <p><mark>In an effort to achieve goals #2 and #3, the full screen profile viewer provides the user with only necessary information to aid them in moving forward in the flow.</mark></p>
             <br>
             <p>With a full view of profile information, compatible criteria is highlighted, informing the user why this profile is a good match. Competing products would bombard the user with irrelevant information, making it more difficult to make a decision.</p>
             <br>
@@ -193,7 +193,7 @@
                     <sub>Questionnaire</sub>
                 </div>
                 <div class="col-lg-8 col-md-8 col-sm-8 col-xs-8" style="padding-left: 15%; padding-top:10%">
-                    <p>The profile setup contains a lot of questions, so in order to expedite the process and accomplish goal #1, the user should be able to understand what is asked quickly. No clutter to get in the way.</p>
+                    <p>The profile setup contains a lot of questions, so in order to expedite the process and accomplish goal #1, <mark>the user should be able to understand what is asked quickly</mark>. No clutter to get in the way.</p>
                     <br>
                     <p>The indicator at the bottom lets the user know how much of the questionnaire is left. If they need to change an answer, the arrows let them navigate seamlessly between questions.</p>
                 </div>
