Update to discovery phase

--- a/kiteflite.html
+++ b/kiteflite.html
@@ -43,7 +43,7 @@
                 <div class="col-lg-8 col-md-8 col-sm-8 col-xs-8 case-head">
                     <h2 class="header"><span class="">Kiteflite</span></h2>
                     <p class="case-head">Following the Scrum agile methodology, Kiteflite was designed and developed in four weeks during a Software Engineering Studio course at Texas A&M University. <br><br>
-                        Kiteflite is a mashup web application that uses Node.js, XMLHttpRequest, and Fetch APIs to get the user to the most ideal destination to fly a kite. <br><br>
+                        Kiteflite is a mashup web application that gets the user to the most ideal destination to fly a kite. <br><br>
                     </p>
                     <a href="https://clayjuneau.com/Kiteflite" target="_blank">VISIT WEBSITE&nbsp&nbsp<i class="fas fa-external-link-alt fa-sm"></i></a>
                 </div>
@@ -63,14 +63,12 @@
             <h1>The Challenge</h1>
             <br>
             <p>
-                My team of three students were tasked to create a mashup web application in four weeks during a Software Engineering Studio course at Texas A&M University in the Fall of 2019.
-                Often times the conditions outside are not optimal to fly a kite. <mark>We saw a need for an all-in-one application to find a location with perfect kite-flying weather and provide the user with flight itinerary to get there.</mark>
+                My team of three students was tasked to create a mashup web application in four weeks during a Software Engineering Studio course at Texas A&M University in the Fall of 2019. The web application had to incorporate three separate APIs.
             </p>
             <br>
             <h3>My Role</h3>
             <p>
-                With a small team of three students, we each played a big role throughout the full stack of design and development. I focused on <mark>integrating the APIs to communicate with one another as well as implementing the information to the front-end user interface.</mark> 
-                <a class="inline" href="https://www.linkedin.com/in/ryan-cohen-6186a2161/" target="_blank">Ryan Cohen</a> took on the role of project manager to keep the team on top of deadlines and version launches, and <a class="inline" href="https://www.linkedin.com/in/priyanka-paul-a7bb81145/" target="_blank">Priyanka Paul</a> assisted me in the back-end implementation of the APIs.
+                With a small team of three students (<a class="inline" href="https://www.linkedin.com/in/ryan-cohen-6186a2161/" target="_blank">Ryan Cohen</a>, <a class="inline" href="https://www.linkedin.com/in/priyanka-paul-a7bb81145/" target="_blank">Priyanka Paul</a>, and myself), we each played an important role throughout the design process and full stack of development.
             </p>
             <br><hr><br>
         </div>
@@ -78,21 +76,39 @@
         <div id="discovery" class="container">
             <h1>The Discovery</h1>
             <br>
-            <h3>User Stories</h3>
-            <p>In order to develop an impactful and usable web application, we needed to first understand our users and stakeholders. <mark>We came up with user stories as an end goal that articulates what value our project will bring to our users.</mark></p>
+            <h3>Finding the Problem</h3>
+            <p>Often times the weather conditions outside are not optimal to fly a kite. People that are stuck in bad weather a frustrated that they are unable to fly their kite. <mark>The underlying problem is that avid kite-flyers do not have the ability to fly their kite at their current location.</mark></p>
+            <br>
+            <h3>Solving the Problem</h3>
+            <p>With this problem, people need a resource that enables them to have the opportunity to fly a kite regardless of the current weather locations where they are. We decided to come up with a <mark>simple and accessible web application to serve as a resource to get people flying their kite.</mark></p>
+            <br>
+            <p>In order to develop an impactful and usable web application, we needed to first understand our users and stakeholders. After conducting interviews with a sample of our target users, we developed <mark>user stories</mark> to outline user needs that our product will fill.</p>
             <br>
             <ul>
                 <li>As an avid kite-flyer, I want to know a location that has optimal flying weather when my current location does not so that I can fly my kite whenever I want.</li>
                 <li>As an avid kite-flyer, I want to know the best park and highly rated nearby cafe in my destination so I can be more familiar with the city when I arrive.</li>
                 <li>As a user largely unfamiliar with kites, I want to be informed on what type of weather I should be flying my type of kite in so that I can have the best experience when I fly my kite.</li>
             </ul>
+            <br>
+            <p>With these discoveries in mind, I decided to come up with a central mission statement for the product.</p>
+            <br>
+            <p style="font-weight: bolder; font-style: italic;"><mark>Provide resources to enable users to fly a kite regardless of the current weather conditions.</mark></p>
+            <br>
+            <p>In order to achieve this mission statement, I created three goals that I would focus on:</p>
+            <ol style="padding-left: 10%">
+                <li style="font-weight: bolder;">Provide information in an efficient and clear manner</li>
+                <li style="font-weight: bolder;">Make the user journey from input to results simple and fast</li>
+                <li style="font-weight: bolder;">Allow the product to be usable by all types of users</li>
+            </ol>
+            <br>
+            <p>Now that we know what the problem is and how we are going to tackle it, we can start the design and development process.</p>
             <br><hr><br>
         </div>
 
         <div id="process" class="container">
             <h1>The Process</h1>
             <br>
-            <p>We started by writing a <mark>high-level design proposal</mark> of our product where we discussed our goal of desired functionality, stretch goals, and fallback goals. We <mark>developed sprint backlog</mark> that we would refer to when delegating and accomplishing tasks throughout each Scrum sprint. Lastly, I created an <mark>initial interface wireframe</mark> that we used to visualize our end product.</p>
+            <p>We started by writing a <mark>high-level design proposal</mark> of our product where we discussed our goal of desired functionality, stretch goals, and fallback goals. We <mark>developed a sprint backlog</mark> that we would refer to when delegating and accomplishing tasks throughout each Scrum sprint. Lastly, I created an <mark>initial interface wireframe</mark> that we used to visualize our end product.</p>
             <div class="row">
                 <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12" style="text-align: center;">
                     <img class="center" src="kiteflite/initialsketch.jpg" style="max-width: 60%; max-height: 80%;">
