--- a/tamuhack.html
+++ b/tamuhack.html
@@ -86,7 +86,7 @@
             </p>
             <br>
             <p>
-                In order to figure out what the essential content for a particular user is, we developed a few <mark>mini personas</mark> using demographic statistics from previous iterations of TAMUhack and registration data from this year.
+                In order to figure out what the essential content for a particular user is, we developed a two <mark>personas</mark> using demographic statistics and hacker/company feedback from previous iterations of TAMUhack.
             </p>
             <br>
             <div class="row">
