Changed portfolio pics

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 
             <a class="card-link" href="google2020.html">
                 <li data-aos="fade-up" data-aos-duration="600" class="thumbnail-grid-item">
-                    <div class="card" style="background-image: url(google.jpg); background-size: contain; background-repeat: no-repeat;">
+                    <div class="card" style="background-image: url(google.png); background-size: contain; background-repeat: no-repeat;">
                         <div class="card-pants">
                             <h4 class="card-title">MentMatch</h4>
                             <h5 class="card-subtitle">UX/UI Design, Interaction Design</h5>
@@ -71,7 +71,7 @@
 
             <a class="card-link" href="kiteflite.html">
                 <li data-aos="fade-up" data-aos-duration="600" class="thumbnail-grid-item">
-                    <div class="card" style="background-image: url(kiteflite.jpg); background-size: contain; background-repeat: no-repeat;">
+                    <div class="card" style="background-image: url(kiteflite.png); background-size: contain; background-repeat: no-repeat;">
                         <div class="card-pants">
                             <h4 class="card-title">Kiteflite</h4>
                             <h5 class="card-subtitle">UX/UI Design, Agile, APIs</h5>
