--- a/index.html
+++ b/index.html
@@ -20,6 +20,11 @@
         <link rel="stylesheet" href="fonts.css">
         <script src="https://kit.fontawesome.com/85c6b76167.js" crossorigin="anonymous"></script>
         <script src="scroll.js"></script>
+
+        <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+<link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+<link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+<link rel="manifest" href="/site.webmanifest">
     </head>
     <body>
 
