Formatting changes to portfolio nav

--- a/tamuhack.html
+++ b/tamuhack.html
@@ -42,18 +42,22 @@
             <div class="row">
                 <div class="col-lg-8 col-md-8 col-sm-8 col-xs-8 case-head">
                     <h2 class="header"><span class="">TAMUhack Website</span></h2>
-                    <p class="case-head">TAMUhack is one of the largest student-led hackathons in Texas with over 800 attendees. The event occurs annually at Texas A&M University in College Station. <br><br>
-                        I joined the team as a Design Director in October 2019 to help launch the sixth iteration of the hackathon, TAMUhack 2020.<br><br>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-lg-8 col-md-8 col-sm-8 col-xs-8 case-head">
+                    <p class="case-head">TAMUhack is one of the largest student-led hackathons in Texas with over 800 attendees. The event occurs annually at Texas A&M University in College Station.<br><br>
+                        I joined the team as a Design Director in October 2019 to help launch the sixth iteration of the hackathon, TAMUhack 2020. <br><br>
                     </p>
-                    <a href="https://tamuhack.com/" target="_blank">VISIT WEBSITE&nbsp&nbsp<i class="fas fa-external-link-alt fa-sm"></i></a>
+                    <a href="https://clayjuneau.com/Kiteflite" target="_blank">GO TO WEBSITE&nbsp&nbsp<i class="fas fa-external-link-alt fa-sm"></i></a>
                 </div>
                 <div class="col-lg-4 col-md-4 col-sm-4 col-xs-4">
-                    <ol style="margin-left: 30%; margin-top: 10%">
-                        <li><a href="#challenge">Challenge</a></li>
-                        <li><a href="#discovery">Discovery</a></li>
-                        <li><a href="#process">Process</a></li>
-                        <li><a href="#outcome">Outcome</a></li>
-                    </ol>
+                    <div style="margin-left: 30%;">
+                        <a href="#challenge">Challenge</a><br><br>
+                        <a href="#discovery">Discovery</a><br><br>
+                        <a href="#process">Process</a><br><br>
+                        <a href="#outcome">Outcome</a>
+                    </div>
                 </div>
             </div>
             <br><hr><br>
