--- a/google2020.html
+++ b/google2020.html
@@ -42,17 +42,22 @@
             <div class="row">
                 <div class="col-lg-8 col-md-8 col-sm-8 col-xs-8 case-head">
                     <h2 class="header"><span class="">MentMatch</span></h2>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-lg-8 col-md-8 col-sm-8 col-xs-8 case-head">
                     <p class="case-head">A project for the 2020 Google Design Exercise. <br><br>
-                        I will walk through my design process and elaborate on the design decisions that I made while completing this exercise.<br><br>
+                        I will walk through my design process and elaborate on the design decisions that I made while completing this exercise. <br><br>
                     </p>
+                    <a href="https://clayjuneau.com/Kiteflite" target="_blank">GO TO WEBSITE&nbsp&nbsp<i class="fas fa-external-link-alt fa-sm"></i></a>
                 </div>
                 <div class="col-lg-4 col-md-4 col-sm-4 col-xs-4">
-                    <ol style="margin-left: 30%; margin-top: 10%">
-                        <li><a href="#challenge">Challenge</a></li>
-                        <li><a href="#discovery">Research</a></li>
-                        <li><a href="#process">Process</a></li>
-                        <li><a href="#outcome">Stretch Goals</a></li>
-                    </ol>
+                    <div style="margin-left: 30%;">
+                        <a href="#challenge">Challenge</a><br><br>
+                        <a href="#discovery">Discovery</a><br><br>
+                        <a href="#process">Process</a><br><br>
+                        <a href="#outcome">Outcome</a>
+                    </div>
                 </div>
             </div>
             <br><hr><br>
