--- a/kiteflite.html
+++ b/kiteflite.html
@@ -42,18 +42,22 @@
             <div class="row">
                 <div class="col-lg-8 col-md-8 col-sm-8 col-xs-8 case-head">
                     <h2 class="header"><span class="">Kiteflite</span></h2>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-lg-8 col-md-8 col-sm-8 col-xs-8 case-head">
                     <p class="case-head">Following the Scrum agile methodology, Kiteflite was designed and developed in four weeks during a Software Engineering Studio course at Texas A&M University. <br><br>
                         Kiteflite is a mashup web application that gets the user to the most ideal destination to fly a kite. <br><br>
                     </p>
-                    <a href="https://clayjuneau.com/Kiteflite" target="_blank">VISIT WEBSITE&nbsp&nbsp<i class="fas fa-external-link-alt fa-sm"></i></a>
+                    <a href="https://clayjuneau.com/Kiteflite" target="_blank">GO TO WEBSITE&nbsp&nbsp<i class="fas fa-external-link-alt fa-sm"></i></a>
                 </div>
                 <div class="col-lg-4 col-md-4 col-sm-4 col-xs-4">
-                    <ol style="margin-left: 30%; margin-top: 10%">
-                        <li><a href="#challenge">Challenge</a></li>
-                        <li><a href="#discovery">Discovery</a></li>
-                        <li><a href="#process">Process</a></li>
-                        <li><a href="#outcome">Outcome</a></li>
-                    </ol>
+                    <div style="margin-left: 30%;">
+                        <a href="#challenge">Challenge</a><br><br>
+                        <a href="#discovery">Discovery</a><br><br>
+                        <a href="#process">Process</a><br><br>
+                        <a href="#outcome">Outcome</a>
+                    </div>
                 </div>
             </div>
             <br><hr><br>
@@ -169,8 +173,8 @@
                     <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
                         <a class="links" href="ClayJuneauResume.pdf" target="_blank">Resume</a>
                         <a class="links" href="https://linkedin.com/in/clayjuneau" target="_blank">LinkedIn</a>
-                        <a class="links"  href="https://github.com/clayjuneau" target="_blank">GitHub</a class="links">
-                        <a class="links"  href="mailto:hello@clayjuneau.com" target="_blank">hello@clayjuneau.com</a class="links">
+                        <a class="links"  href="https://github.com/clayjuneau" target="_blank">GitHub</a>
+                        <a class="links"  href="mailto:hello@clayjuneau.com" target="_blank">hello@clayjuneau.com</a>
                     </div>
                 </div>
             </div>
