--- a/index.html
+++ b/index.html
@@ -113,8 +113,8 @@
                     <p>When I'm am not programming or designing, you'll find me riding my bike, binge watching
                         Bon Appétit videos, or brewing my next batch of cold brew.</p>
                     <br>
-                    <p style="font-family: Circular Std Bold;">I am currently seeking an internship for the summer of 2020 to further my experience in design!</p>
-                    <br>
+                    <!-- <p style="font-family: Circular Std Bold;">I am currently seeking an internship for the summer of 2020 to further my experience in design!</p>
+                    <br> -->
                     <p>I love meeting new people! Say <a href="mailto:hello@clayjuneau.com">hello@clayjuneau.com</a></p>
                 </div>
                 <div class="col-lg-4 col-md-4 col-sm-4 col-xs-4">
