Updated about me text

--- a/index.html
+++ b/index.html
@@ -107,14 +107,13 @@
             <br>
             <div class="row">
                 <div class="col-lg-8 col-md-8 col-sm-8 col-xs-8">
-                    <p>I'm Clay Juneau. I am a junior computer science major and digital media art minor at 
-                        Texas A&M University. I have a passion for solving problems through design.</p>
+                    <p>I'm Clay Juneau. I'm a senior Computer Science major with a minor in Digital Media Art at 
+                        Texas A&M University. I have a passion for learning new skills while maneuvering space between technology and design.</p>
                     <br>
-                    <p>When I'm am not programming or designing, you'll find me riding my bike, binge watching
-                        Bon Appétit videos, or brewing my next batch of cold brew.</p>
+                    <p>When I'm am not programming or designing, you'll find me cooking a meal, jogging the trail, or brewing my next batch of cold brew.</p>
                     <br>
-                    <!-- <p style="font-family: Circular Std Bold;">I am currently seeking an internship for the summer of 2020 to further my experience in design!</p>
-                    <br> -->
+                    <p style="font-family: Circular Std Bold;">I am currently seeking a full-time position in Austin, TX to kickstart my career in 2021!</p>
+                    <br>
                     <p>I love meeting new people! Say <a href="mailto:hello@clayjuneau.com">hello@clayjuneau.com</a></p>
                 </div>
                 <div class="col-lg-4 col-md-4 col-sm-4 col-xs-4">
