--- a/tamuhack2020.html
+++ b/tamuhack2020.html
@@ -41,7 +41,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-8 col-md-8 col-sm-8 col-xs-8 case-head">
-                    <h2 class="header"><span class="">TAMUhack Website</span></h2>
+                    <h2 class="header"><span class="">TAMUhack 2020</span></h2>
                 </div>
             </div>
             <div class="row">
@@ -49,7 +49,7 @@
                     <p class="case-head">TAMUhack is one of the largest student-led hackathons in Texas with over 800 attendees. The event occurs annually at Texas A&M University in College Station.<br><br>
                         I joined the team as a Design Director in October 2019 to help launch the sixth iteration of the hackathon, TAMUhack 2020. <br><br>
                     </p>
-                    <a href="https://clayjuneau.com/Kiteflite" target="_blank">GO TO WEBSITE&nbsp&nbsp<i class="fas fa-external-link-alt fa-sm"></i></a>
+                    <a href="https://tamuhack.com/" target="_blank">GO TO WEBSITE&nbsp&nbsp<i class="fas fa-external-link-alt fa-sm"></i></a>
                 </div>
                 <div class="col-lg-4 col-md-4 col-sm-4 col-xs-4">
                     <div style="margin-left: 30%;">
