--- a/index.html
+++ b/index.html
@@ -46,6 +46,12 @@
                     <a href="mailto:hello@clayjuneau.com" target="_blank">hello@clayjuneau.com</a>
                 </div>
             </div>
+            <br><br>
+            <div class="row">
+                <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
+                    <p style="font-family: Circular Std Bold; text-align: center;"><mark>I am currently seeking a full-time position in Software Engineering to kickstart my career in 2021.</mark></p>
+                </div>
+            </div>
         </div>
 
         <div class="container">
@@ -56,6 +62,30 @@
 
         <div id="portfolio" class="container col-centered col-lg-12">
             <ul class="thumbnail-grid">
+
+            <a class="card-link" href="tamuhack2021.html">
+                <li data-aos="fade-up" data-aos-duration="600" class="thumbnail-grid-item">
+                    <div class="card" style="background-image: url(tamuhack2021.png); background-size: contain; background-repeat: no-repeat;">
+                        <div class="card-pants">
+                            <h4 class="card-title">TAMUhack 2021 Website</h4>
+                            <h5 class="card-subtitle">Front End Web Development, Web Design</h5>
+                            <p class="card-content">Design and implementation of the website for TAMUhack 2021</p>
+                        </div>
+                    </div>
+                </li>
+            </a>
+
+            <a class="card-link" href="kiteflite.html">
+                <li data-aos="fade-up" data-aos-duration="600" class="thumbnail-grid-item">
+                    <div class="card" style="background-image: url(kiteflite.png); background-size: contain; background-repeat: no-repeat;">
+                        <div class="card-pants">
+                            <h4 class="card-title">Kiteflite</h4>
+                            <h5 class="card-subtitle">Web Development, APIs, Scrum</h5>
+                            <p class="card-content">A web mashup that gets to you to the best location to fly a kite</p>
+                        </div>
+                    </div>
+                </li>
+            </a>
 
             <a class="card-link" href="google2020.html">
                 <li data-aos="fade-up" data-aos-duration="600" class="thumbnail-grid-item">
@@ -69,25 +99,13 @@
                 </li>
             </a>
 
-            <a class="card-link" href="kiteflite.html">
+            <a class="card-link" href="tamuhack2020.html">
                 <li data-aos="fade-up" data-aos-duration="600" class="thumbnail-grid-item">
-                    <div class="card" style="background-image: url(kiteflite.png); background-size: contain; background-repeat: no-repeat;">
+                    <div class="card" style="background-image: url(tamuhack2020.jpg); background-size: contain; background-repeat: no-repeat;">
                         <div class="card-pants">
-                            <h4 class="card-title">Kiteflite</h4>
-                            <h5 class="card-subtitle">UX/UI Development, Agile, APIs</h5>
-                            <p class="card-content">A web mashup that gets to you to the best location to fly a kite</p>
-                        </div>
-                    </div>
-                </li>
-            </a>
-
-            <a class="card-link" href="tamuhack.html">
-                <li data-aos="fade-up" data-aos-duration="600" class="thumbnail-grid-item">
-                    <div class="card" style="background-image: url(tamuhack.jpg); background-size: contain; background-repeat: no-repeat;">
-                        <div class="card-pants">
-                            <h4 class="card-title">TAMUhack Event Website</h4>
-                            <h5 class="card-subtitle">UX/UI Design, Graphic Design, Event Logistics</h5>
-                            <p class="card-content">One of the largest student-led hackathons in Texas</p>
+                            <h4 class="card-title">TAMUhack 2020 Website</h4>
+                            <h5 class="card-subtitle">UX/UI Design, Web Design, Wireframing and Prototyping</h5>
+                            <p class="card-content">Website design for the largest student-led hackathon in Texas</p>
                         </div>
                     </div>
                 </li>
@@ -111,8 +129,6 @@
                         Texas A&M University. I have a passion for learning new skills while maneuvering space between technology and design.</p>
                     <br>
                     <p>When I'm am not programming or designing, you'll find me cooking a meal, jogging the trail, or brewing my next batch of cold brew.</p>
-                    <br>
-                    <p style="font-family: Circular Std Bold;">I am currently seeking a full-time position in Austin, TX to kickstart my career in 2021!</p>
                     <br>
                     <p>I love meeting new people! Say <a href="mailto:hello@clayjuneau.com">hello@clayjuneau.com</a></p>
                 </div>
