--- a/tamuhack2021.html
+++ b/tamuhack2021.html
@@ -41,15 +41,15 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-8 col-md-8 col-sm-8 col-xs-8 case-head">
-                    <h2 class="header"><span class="">TAMUhack 2020</span></h2>
+                    <h2 class="header"><span class="">TAMUhack 2021</span></h2>
                 </div>
             </div>
             <div class="row">
                 <div class="col-lg-8 col-md-8 col-sm-8 col-xs-8 case-head">
-                    <p class="case-head">TAMUhack is of the largest student-led hackathon in Texas with over 800 attendees. The event occurs annually at Texas A&M University in College Station.<br><br>
-                        I joined the team as a Design Director in October 2019 to help launch the sixth iteration of the hackathon, TAMUhack 2020. <br><br>
+                    <p class="case-head">TAMUhack is the largest student-led hackathon in Texas with over 800 attendees. The event occurs annually at Texas A&M University in College Station.<br><br>
+                        Occurring virtually due to COVID-19, TAMUhack has a new look for the 2021 iteration.<br><br>
                     </p>
-                    <a href="https://tamuhack.com/th/2020" target="_blank">GO TO WEBSITE&nbsp&nbsp<i class="fas fa-external-link-alt fa-sm"></i></a>
+                    <a href="https://tamuhack.com/th" target="_blank">GO TO WEBSITE&nbsp&nbsp<i class="fas fa-external-link-alt fa-sm"></i></a>
                 </div>
                 <div class="col-lg-4 col-md-4 col-sm-4 col-xs-4">
                     <div style="margin-left: 30%;">
