--- a/tamuhack2020.html
+++ b/tamuhack2020.html
@@ -96,7 +96,7 @@
             <div class="row">
                 <div class="col-lg-5 col-md-5 col-sm-12 col-xs-12 persona">
                     <h3 style="text-align: center;">Jeffrey</h3>
-                    <div style="text-align: center;"><img src="tamuhack/jeffrey.png" style="max-width: 35%;"></div> <br>
+                    <div style="text-align: center;"><img src="tamuhack2020/jeffrey.png" style="max-width: 35%;"></div> <br>
                     <p class="card-content" style="text-align: center">Computer Engineering student in Austin</p>
                     <p class="card-content" style="text-align: center">First-time hackathon attendee</p>
                     <br>
@@ -111,7 +111,7 @@
                 </div>
                 <div class="col-lg-5 col-md-5 col-sm-12 col-xs-12 persona">
                     <h3 style="text-align: center;">Ingrid</h3>
-                    <div style="text-align: center;"><img src="tamuhack/ingrid.png" style="max-width: 35%;"></div> <br>
+                    <div style="text-align: center;"><img src="tamuhack2020/ingrid.png" style="max-width: 35%;"></div> <br>
                     <p class="card-content" style="text-align: center">Software engineer at AmericanAirlines</p>
                     <p class="card-content" style="text-align: center">Attending TAMUhack with colleagues to represent company</p>
                     <br>
@@ -138,11 +138,11 @@
             <br>
             <div class="row">
                 <div class="col-lg-6 col-md-6 col-sm-6 col-xs-6">
-                    <img src="tamuhack/preevent1.jpg" style="max-width: 100%; max-height: 100%;">
+                    <img src="tamuhack2020/preevent1.jpg" style="max-width: 100%; max-height: 100%;">
                     <sub>Landing page / About</sub>
                 </div>
                 <div class="col-lg-6 col-md-6 col-sm-6 col-xs-6">
-                    <img src="tamuhack/preevent2.jpg" style="max-width: 100%; max-height: 100%;">
+                    <img src="tamuhack2020/preevent2.jpg" style="max-width: 100%; max-height: 100%;">
                     <sub>FAQ / Sponsors</sub>
                 </div>
             </div>
@@ -154,15 +154,15 @@
             <br>
             <div class="row">
                 <div class="col-lg-4 col-md-4 col-sm-4 col-xs-4">
-                    <img src="tamuhack/live1.jpg" style="max-width: 100%; max-height: 100%;">
+                    <img src="tamuhack2020/live1.jpg" style="max-width: 100%; max-height: 100%;">
                     <sub>Landing page / Event info</sub>
                 </div>
                 <div class="col-lg-4 col-md-4 col-sm-4 col-xs-4">
-                    <img src="tamuhack/live2.jpg" style="max-width: 100%; max-height: 100%;">
+                    <img src="tamuhack2020/live2.jpg" style="max-width: 100%; max-height: 100%;">
                     <sub>Schedule / resources</sub>
                 </div>
                 <div class="col-lg-4 col-md-4 col-sm-4 col-xs-4">
-                    <img src="tamuhack/live3.jpg" style="max-width: 100%; max-height: 100%;">
+                    <img src="tamuhack2020/live3.jpg" style="max-width: 100%; max-height: 100%;">
                     <sub>Prizes / Compact FAQ</sub>
                 </div>
             </div>
