--- a/tamuhack2021.html
+++ b/tamuhack2021.html
@@ -49,12 +49,11 @@
                     <p class="case-head">TAMUhack is the largest student-led hackathon in Texas with over 800 attendees. The event occurs annually at Texas A&M University in College Station.<br><br>
                         Occurring virtually due to COVID-19, TAMUhack has a new look for the 2021 iteration.<br><br>
                     </p>
-                    <a href="https://tamuhack.com/th" target="_blank">GO TO WEBSITE&nbsp&nbsp<i class="fas fa-external-link-alt fa-sm"></i></a>
+                    <a href="https://tamuhack.com/th/2021" target="_blank">GO TO WEBSITE&nbsp&nbsp<i class="fas fa-external-link-alt fa-sm"></i></a>
                 </div>
                 <div class="col-lg-4 col-md-4 col-sm-4 col-xs-4">
                     <div style="margin-left: 30%;">
                         <a href="#challenge">Challenge</a><br><br>
-                        <a href="#discovery">Discovery</a><br><br>
                         <a href="#process">Process</a><br><br>
                         <a href="#outcome">Outcome</a>
                     </div>
@@ -67,64 +66,17 @@
             <h1>The Challenge</h1>
             <br>
             <p>
-                In order to produce the hackathon, our team needed <mark>a responsive and adaptable website to serve as a hub for hackers, company representatives, volunteers, and mentors</mark>. 
-                Not only did this website need to contain important information leading up to the event, but it also needed to support the capability of accommodating live updates during the event.
+                In order to produce this year's hackathon, our team needed <mark>a responsive and adaptable website to serve as a hub for hackers, company representatives, volunteers, and mentors</mark>.
             </p>
             <br>
             <h3>My Role</h3>
             <p>
-                I took the lead in <mark>wireframing and prototyping the website using Figma</mark>. I worked as part of a small team of other designers and developers that helped me iterate through designs and make improvements. 
-                Among those people, <a class="inline" href="https://www.linkedin.com/in/gracekfan/" target="_blank">Grace Fan</a> designed the branding graphics for this year’s version of TAMUhack, and <a class="inline" href="https://www.linkedin.com/in/jonathan-innis/" target="_blank">Jonathan Innis</a> implemented the final design.
+                I took the lead in <mark>wireframing and prototyping the website using Figma</mark>. I worked as part of a small team of other designers and developers that helped me iterate through designs and make improvements.
+                I also took charge of implementing a pixel-perfect version of our website design.
+                <br> <br>
+                Among those people, <a class="inline" href="https://www.linkedin.com/in/anthonyteo/" target="_blank">Anthony Teo</a> oversaw creative direction for this year’s version of TAMUhack, and <a class="inline" href="https://www.linkedin.com/in/vivianyus/" target="_blank">Vivian Yu</a> and <a class="inline" href="https://www.linkedin.com/in/rickybengani/" target="_blank">Ricky Bengani</a> helped iterate designs and create other promotional materials.
+                Since this was the first time I brought a design to code for TAMUhack, <a class="inline" href="https://www.linkedin.com/in/nathan-r-profile/" target="_blank">Nathan Reddy</a> acted as a mentor in teaching me the languages and tools our organization used for development.
             </p>
-            <br><hr><br>
-        </div>
-
-        <div id="discovery" class="container">
-            <h1>The Discovery</h1>
-            <br>
-            <h3>Our Users</h3>
-            <p>
-                Since the website was going to be frequently accessed by hackers, company representatives, volunteers, mentors, and potential sponsors and partners, 
-                it needed to provide specific information and functionality based on the wide variety of users while also maintaining simplicity. <mark>Our team decided we wanted to highlight as many 
-                features that are common between user personas as possible.</mark> That way, our website would have essential content while keeping usability high.
-            </p>
-            <br>
-            <p>
-                In order to figure out what the essential content for a particular user is, we developed a two <mark>personas</mark> using demographic statistics and hacker/company feedback from previous iterations of TAMUhack.
-            </p>
-            <br>
-            <div class="row">
-                <div class="col-lg-5 col-md-5 col-sm-12 col-xs-12 persona">
-                    <h3 style="text-align: center;">Jeffrey</h3>
-                    <div style="text-align: center;"><img src="tamuhack/jeffrey.png" style="max-width: 35%;"></div> <br>
-                    <p class="card-content" style="text-align: center">Computer Engineering student in Austin</p>
-                    <p class="card-content" style="text-align: center">First-time hackathon attendee</p>
-                    <br>
-                    <p class="card-subtitle" style="text-align: center">"I'm excited to participate in my first hackathon, but I'm unsure of what to expect."</p>
-                    <p style="text-decoration: underline;">Needs:</p>
-                    <p class="card-content">• Jeffrey needs to know what he can do ahead of time to prepare for the event.</p>
-                    <p class="card-content">• When he arrives to College Station, Jeffrey needs information on how to check-in and where to park near the venue.</p>
-                    <br>
-                    <p style="text-decoration: underline;">Frustrations:</p>
-                    <p class="card-content">• Jeffrey is nervous that he won’t be able to find people to form a team when he gets there.</p>
-                    <p class="card-content">• Jeffrey has a lot of questions about hackathons, and his hackathon-veteran friend won’t respond to his texts.</p>
-                </div>
-                <div class="col-lg-5 col-md-5 col-sm-12 col-xs-12 persona">
-                    <h3 style="text-align: center;">Ingrid</h3>
-                    <div style="text-align: center;"><img src="tamuhack/ingrid.png" style="max-width: 35%;"></div> <br>
-                    <p class="card-content" style="text-align: center">Software engineer at AmericanAirlines</p>
-                    <p class="card-content" style="text-align: center">Attending TAMUhack with colleagues to represent company</p>
-                    <br>
-                    <p class="card-subtitle" style="text-align: center">"I am looking forward to meeting a ton of smart students and to seeing what they create!"</p>
-                    <p style="text-decoration: underline;">Needs:</p>
-                    <p class="card-content">• Ingrid anticipates leading a successful programming workshop during the hackathon.</p>
-                    <p class="card-content">• Ingrid is looking forward to meeting potential summer interns for her company.</p>
-                    <br>
-                    <p style="text-decoration: underline;">Frustrations:</p>
-                    <p class="card-content">• Ingrid doesn’t know the size of the room her workshop will take place, and she can’t plan logistics until she knows.</p>
-                    <p class="card-content">• Ingrid is unsure of how to contact hackers about internship interviews during the event.</p>
-                </div>
-            </div>
             <br><hr><br>
         </div>
 
@@ -132,40 +84,49 @@
             <h1>The Process</h1>
             <br>
             <p>
-                After knowing what our goals were, we set out to design, develop, and launch the pre-event website as soon as possible to ensure that users had access to essential content prior to the event. 
-                With this year’s branding graphics already created, my goal was to maintain consistency throughout all of our designs and platforms.
+                Our design process started with brainstorming and ideation for a visual theme. While collaborating virtually, we developed a moodboard for some direction.
             </p>
             <br>
+
             <div class="row">
-                <div class="col-lg-6 col-md-6 col-sm-6 col-xs-6">
-                    <img src="tamuhack/preevent1.jpg" style="max-width: 100%; max-height: 100%;">
-                    <sub>Landing page / About</sub>
-                </div>
-                <div class="col-lg-6 col-md-6 col-sm-6 col-xs-6">
-                    <img src="tamuhack/preevent2.jpg" style="max-width: 100%; max-height: 100%;">
-                    <sub>FAQ / Sponsors</sub>
+                <div class="col-lg-10 col-md-10" style="display: block; margin: auto;">
+                    <img src="tamuhack2021/moodboard.png" style="max-width: 100%; max-height: 100%; display: block;">
+                    <sub>Moodboard</sub>
                 </div>
             </div>
-            <br><br>
+
+            <br>
             <p>
-                With the live version of the website, <mark>we accommodated for the change in our users’ goals</mark> by moving more important sections to the top of the website. 
-                During the event, hackers are less interested in reading about the history of TAMUhack and more likely to seek resources and assistance on their project.
+                When we finalized a new TAMUhack logo and visual theme, we began iterating wireframes for the website in <mark>Figma</mark>. 
             </p>
             <br>
+
             <div class="row">
-                <div class="col-lg-4 col-md-4 col-sm-4 col-xs-4">
-                    <img src="tamuhack/live1.jpg" style="max-width: 100%; max-height: 100%;">
-                    <sub>Landing page / Event info</sub>
-                </div>
-                <div class="col-lg-4 col-md-4 col-sm-4 col-xs-4">
-                    <img src="tamuhack/live2.jpg" style="max-width: 100%; max-height: 100%;">
-                    <sub>Schedule / resources</sub>
-                </div>
-                <div class="col-lg-4 col-md-4 col-sm-4 col-xs-4">
-                    <img src="tamuhack/live3.jpg" style="max-width: 100%; max-height: 100%;">
-                    <sub>Prizes / Compact FAQ</sub>
+                <div class="col-lg-10 col-md-10" style="display: block; margin: auto;">
+                    <img src="tamuhack2021/wireframe1.png" style="max-width: 100%; max-height: 100%; display: block;">
+                    <sub>Initial wireframe</sub>
                 </div>
             </div>
+
+            <br>
+
+            <div class="row">
+                <div class="col-lg-10 col-md-10" style="display: block; margin: auto;">
+                    <img src="tamuhack2021/finalwireframe.png" style="max-width: 100%; max-height: 100%; display: block;">
+                    <sub>Final wireframe</sub>
+                </div>
+            </div>
+
+            <br>
+            <p>
+                After we came up with a final wireframe that we thought was successful, it was time to for me to transfer the design into code.
+            </p>
+            <p>
+                Since this was my first time implementing a design for TAMUhack, I had to learn the stack that was used. The website was implemented using <mark>Vue.js</mark> <mark>TailwindCSS</mark>, a CSS framework.
+            </p>
+            <p>
+                The repository with all the code can be seen here: <a class="inline" href="https://github.com/OneWebDev/TAMUhack-2021" target="_blank">TAMUhack-2021 GitHub Repo</a>
+            </p>
             
             <br><hr><br>
         </div>
@@ -174,11 +135,11 @@
             <h1>The Outcome</h1>
             <br>
             <p>
-                <em><mark>Great, not perfect. Always room for improvement.</mark></em>
+                You can visit the live version of the website by <a href="https://tamuhack.com/th/2021" target="_blank">clicking here!</a>
             </p>
             <br>
             <p>
-                The accommodating and flexible design of the TAMUhack 2020 website allowed for over 800 hackers, 23 companies, and volunteers and mentors, to have a positive experience during the event!
+                The TAMUhack 2021 website will serve as the hub for hackers, company representatives, volunteers, and mentors throughout the event on January 30-31, 2021.
             </p>
         </div>
 
