--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
                     <div class="card" style="background-image: url(tamuhack2021.png); background-size: contain; background-repeat: no-repeat;">
                         <div class="card-pants">
                             <h4 class="card-title">TAMUhack 2021 Website</h4>
-                            <h5 class="card-subtitle">Front End Web Development, Web Design</h5>
+                            <h5 class="card-subtitle">Front End Development, Web Design, Wireframing and Prototyping</h5>
                             <p class="card-content">Design and implementation of the website for TAMUhack 2021</p>
                         </div>
                     </div>
