--- a/tamuhack2021.html
+++ b/tamuhack2021.html
@@ -119,10 +119,10 @@
 
             <br>
             <p>
-                After we came up with a final wireframe that we thought was successful, it was time to for me to transfer the design into code.
+                After we came up with a final wireframe that we believed best represented our goal, it was time to for me to transfer the design into code.
             </p>
             <p>
-                Since this was my first time implementing a design for TAMUhack, I had to learn the stack that was used. The website was implemented using <mark>Vue.js</mark> <mark>TailwindCSS</mark>, a CSS framework.
+                The team tasked me with implementing the design. I first familiarized myself with the stack that has been used previously, and then got to work developing the site based on our prototype. The website was implemented using <mark>Vue.js</mark> <mark>TailwindCSS</mark>, a CSS framework.
             </p>
             
             <br><hr><br>
