--- a/tamuhack2021.html
+++ b/tamuhack2021.html
@@ -122,7 +122,7 @@
                 After we came up with a final wireframe that we believed best represented our goal, it was time to for me to transfer the design into code.
             </p>
             <p>
-                The team tasked me with implementing the design. I first familiarized myself with the stack that has been used previously, and then got to work developing the site based on our prototype. The website was implemented using <mark>Vue.js</mark> <mark>TailwindCSS</mark>, a CSS framework.
+                The team tasked me with implementing the design. I first familiarized myself with the stack that has been used previously, and then got to work developing the site based on our prototype. The website was implemented using <mark>Vue.js</mark> and <mark>TailwindCSS</mark>, a CSS framework.
             </p>
             
             <br><hr><br>
