--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
                     <div class="card" style="background-image: url(kiteflite.png); background-size: contain; background-repeat: no-repeat;">
                         <div class="card-pants">
                             <h4 class="card-title">Kiteflite</h4>
-                            <h5 class="card-subtitle">Web Development, APIs, Scrum</h5>
+                            <h5 class="card-subtitle">Full Stack Development, APIs, Scrum</h5>
                             <p class="card-content">A web mashup that gets to you to the best location to fly a kite</p>
                         </div>
                     </div>
