Update About Me text

--- a/index.html
+++ b/index.html
@@ -133,8 +133,7 @@
             <br>
             <div class="row">
                 <div class="col-lg-8 col-md-8 col-sm-8 col-xs-8">
-                    <p>I'm Clay Juneau. I'm a senior Computer Science major with minors in Cybersecurity and Digital Media Art at 
-                        Texas A&M University. I have a passion for learning new skills while maneuvering space between technology and design.</p>
+                    <p>I'm Clay Juneau. I'm a recent graduate from Texas A&M University with a degree in Computer Science and minors in Cybersecurity and Digital Media Art. I have a passion for learning new skills while maneuvering space between technology and design.</p>
                     <br>
                     <p>When I'm am not programming or designing, you'll find me cooking a meal, jogging the trail, or brewing my next batch of cold brew.</p>
                     <br>
