Changed copy on home page

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
         <div class="container landing">
             <div class="row">
                 <div class="col-lg-12">
-                    <h2 class="header">I'm <span class="name">Clay</span> — a computer science and digital art student in Texas.</h2>
+                    <h2 class="header">I'm <span class="name">Clay</span> — a software developer based in Austin, Texas.</h2>
                     <br>
                 </div>
             </div>
@@ -53,13 +53,7 @@
                     <a href="https://github.com/clayjuneau" target="_blank">GitHub</a>
                     <a href="mailto:hello@clayjuneau.com" target="_blank">hello@clayjuneau.com</a>
                 </div>
-            </div>
-            <br><br>
-            <div class="row">
-                <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
-                    <p style="font-family: Circular Std Bold; text-align: center;"><mark>I am currently seeking a full-time position in Software Engineering to kickstart my career in 2021.</mark></p>
-                </div>
-            </div>
+            </div>   
         </div>
 
         <div class="container">
