--- a/deeplinktest.html
+++ b/deeplinktest.html
@@ -10,6 +10,6 @@
                 }, 5000);
             };
         </script>
-        <a href="com.localflavor://privacy-policy" target="_blank" id="l" onclick="myFunc()">Click Me</a>
+        <a href="com.localflavor://privacy-policy" id="l" onclick="myFunc()">Click Me</a>
     </body>
 </html>
