--- a/deeplinktest.html
+++ b/deeplinktest.html
@@ -1,5 +1,11 @@
 <!DOCTYPE html>
 <html>
+    <head>
+        <meta id="apple-smart-banner" name="apple-itunes-app">
+        <script>
+            document.getElementById("apple-smart-banner").setAttribute("content", `app-id=1043701586, app-argument=https://localflavor.com/privacy-policy`)
+        </script>
+    </head>
     <body>
         <script type="text/javascript">
             function myFunc() {
