--- a/deeplinktest.html
+++ b/deeplinktest.html
@@ -3,7 +3,7 @@
     <head>
         <meta id="apple-smart-banner" name="apple-itunes-app">
         <script>
-            document.getElementById("apple-smart-banner").setAttribute("content", `app-id=1043701586, app-argument=https://localflavor.com/privacy-policy`)
+            document.getElementById("apple-smart-banner").setAttribute("content", `app-id=1043701586, app-argument=com.localflavor://privacy-policy`)
         </script>
     </head>
     <body>
